# ghostwire

./: .dockerignore  .gitignore  CHANGELOG.md  CHANNELS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  fly.toml  uninstall.sh
.github/scoop-manifest/: ghostwire.json
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: app.rs  config.rs  crypto.rs  errors.rs  keystore.rs  logging.rs  main.rs  network.rs  security_audit.rs  ui.rs
docs/: CLIENT.md  FEATURES.md  README.md  SECURITY.md
docs/dev/: FEATURES.md  LOCAL_DEV.md  README.md  SERVER.md
docs/user/: GUIDE.md  README.md  SECURITY.md  WINDOWS.md
server/: Cargo.toml  fly.toml
server/src/: local.rs  main.rs  relay.rs  status_page.rs
