[workspace]
resolver = "2"
members = [
    "client",
    "server",
]

[workspace.package]
version = "0.5.1"
edition = "2024"
authors = ["jCyrus <jcyrus@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/jcyrus/GhostWire"
homepage = "https://github.com/jcyrus/GhostWire"
description = "Ephemeral TUI chat client with E2EE and a dumb relay server"
keywords = ["chat", "tui", "websocket", "terminal", "ratatui"]
categories = ["command-line-utilities", "network-programming"]

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
