[package]
name = "ghostwire-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ghostwire"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# TUI Framework
ratatui = "0.25"
crossterm = "0.27"

# WebSocket Client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
confy = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
sysinfo = "0.30"
directories = "5.0"

# Cryptography (v0.3.0 - E2EE)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
base64 = "0.21"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
toml = "0.8"
