[package]
name = "ghostwire-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# Shuttle deployment binary
# Shuttle deployment binary
[[bin]]
name = "ghostwire-server"
path = "src/main.rs"

# Local development binary
[[bin]]
name = "ghostwire-local"
path = "src/local.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Web Framework
axum = { version = "0.8.8", features = ["ws"] }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"

# Async utilities
futures = "0.3.32"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities
uuid = { version = "1.22.0", features = ["v4", "serde"] }
